--- a/imageroot/systemd/user/roundecubemail.service
+++ b/imageroot/systemd/user/roundecubemail.service
@@ -4,29 +4,29 @@
 #
 
 #
-# This systemd unit starts a kickstart instance using Podman.
+# This systemd unit starts a roundecubemail instance using Podman.
 # Most parts of this file come from podman-generate-systemd.
 #
 [Unit]
-Description=kickstart server
+Description=roundecubemail server
 
 [Service]
 Environment=PODMAN_SYSTEMD_UNIT=%n
 EnvironmentFile=%S/state/environment
 WorkingDirectory=%S/state
 Restart=always
-ExecStartPre=/bin/rm -f %t/kickstart.pid %t/kickstart.ctr-id
+ExecStartPre=/bin/rm -f %t/roundecubemail.pid %t/roundecubemail.ctr-id
 ExecStart=/usr/bin/podman run \
     --detach \
-    --conmon-pidfile=%t/kickstart.pid \
-    --cidfile=%t/kickstart.ctr-id \
+    --conmon-pidfile=%t/roundecubemail.pid \
+    --cidfile=%t/roundecubemail.ctr-id \
     --cgroups=no-conmon \
     --replace --name=%N \
     --publish=127.0.0.1:${TCP_PORT}:8080 \
     ${ECHO_SERVER_IMAGE}
-ExecStop=/usr/bin/podman stop --ignore --cidfile %t/kickstart.ctr-id -t 10
-ExecStopPost=/usr/bin/podman rm --ignore -f --cidfile %t/kickstart.ctr-id
-PIDFile=%t/kickstart.pid
+ExecStop=/usr/bin/podman stop --ignore --cidfile %t/roundecubemail.ctr-id -t 10
+ExecStopPost=/usr/bin/podman rm --ignore -f --cidfile %t/roundecubemail.ctr-id
+PIDFile=%t/roundecubemail.pid
 Type=forking
 
 [Install]
