--- a/imageroot/systemd/user/roundcubemail-app.service
+++ b/imageroot/systemd/user/roundcubemail-app.service
@@ -15,14 +15,14 @@ EnvironmentFile=-%S/state/roundcubemail_default_network.env
 WorkingDirectory=%S/state
 Restart=always
 TimeoutStopSec=70
-ExecStartPre=/bin/mkdir -p %S/state/config
+ExecStartPre=/bin/mkdir -p config
 ExecStartPre=/bin/rm -f %t/roundcubemail-app.pid %t/roundcubemail-app.ctr-id
 ExecStartPre=-/usr/local/bin/runagent discover-service
 ExecStart=/usr/bin/podman run --conmon-pidfile %t/roundcubemail-app.pid \
     --cidfile %t/roundcubemail-app.ctr-id --cgroups=no-conmon \
     --pod-id-file %t/roundcubemail.pod-id --replace -d --name  roundcubemail-app \
     --volume html:/var/www/html/:Z \
-    --volume  %S/state/config:/var/roundcube/config/:Z \
+    --volume ./config:/var/roundcube/config:Z \
     --env=ROUNDCUBEMAIL_* \
     --env ROUNDCUBEMAIL_DB_TYPE=mysql \
     --env ROUNDCUBEMAIL_DB_HOST=127.0.0.1 \
