comment review of davidep
Co-authored-by: Davide Principi <davide.principi@nethesis.it>

--- a/imageroot/etc/state-include.conf
+++ b/imageroot/etc/state-include.conf
@@ -1,5 +1,5 @@
 #
-# Webtop state/backup include patterns for Restic
+# Roundcube state/backup include patterns for Restic
 # Syntax reference: https://pkg.go.dev/path/filepath#Glob
 # Restic --files-from: https://restic.readthedocs.io/en/stable/040_backup.html#including-files
 #
