--- a/imageroot/systemd/user/roundcubemail.service
+++ b/imageroot/systemd/user/roundcubemail.service
@@ -23,6 +23,8 @@ ExecStartPre=/usr/bin/podman pod create --infra-conmon-pidfile %t/roundcubemail.
     --pod-id-file %t/roundcubemail.pod-id \
     --name roundcubemail \
     --publish 127.0.0.1:${TCP_PORT}:80 \
+    --network=slirp4netns:allow_host_loopback=true \
+    --add-host=accountprovider:10.0.2.2 \
     --replace
 ExecStart=/usr/bin/podman pod start --pod-id-file %t/roundcubemail.pod-id
 ExecStop=/usr/bin/podman pod stop --ignore --pod-id-file %t/roundcubemail.pod-id -t 10
