--- a/renovate.json
+++ b/renovate.json
@@ -5,7 +5,7 @@
   "regexManagers": [
     {
       "fileMatch": ["build-images.sh"],
-      "matchStrings": ["docker\\.io/roundcube/roundcubemail:(?<currentValue>[^\\s]+)-apache"],
+      "matchStrings": ["docker\\.io/roundcube/roundcubemail:(?<currentValue>[^\\s]+)"],
       "depNameTemplate": "roundcube/roundcubemail",
       "datasourceTemplate": "docker"
     }
