chore: Update Docker dependency in renovate.json configuration for build-images.sh

--- a/renovate.json
+++ b/renovate.json
@@ -20,6 +20,14 @@
     },
     {
       "fileMatch": ["build-images.sh"],
+      "matchStrings": [
+        "docker\\.io/roundcube/roundcubemail:(?<currentValue>[-0-9\\.a-z]+)"
+      ],
+      "datasourceTemplate": "docker",
+      "depNameTemplate": "roundcube/roundcubemail"
+    },
+    {
+      "fileMatch": ["build-images.sh"],
       "matchStrings": ["docker\\.io/mariadb:(?<currentValue>[^\\s]+)"],
       "depNameTemplate": "mariadb",
       "datasourceTemplate": "docker"
